# gradYOU8

./: .gitignore  .gitmodules  BUILD-SPEC-NAVIGATOR.md  CHAT_STREAMING_BUILD_SPEC.md  CHECKPOINT.md  CLAUDE.md  SPEC.md  chat_layer.py  chat_test_questions.txt  pyproject.toml  render.yaml  requirements.txt  run_agentic_rag.py  run_llm_scored_rag.py  run_pageindex.py  run_tunnel.bat  start.sh  test_pageindex.py  transcript_to_json.py
backend/: .env.example  BUILD-SPEC-AUDIT-CHAT-RETRIEVAL-UNIFICATION.md  BUILD-SPEC.md  build_main.py  debug_env.py  debug_test.py  do_replace.py  do_replace2.py  do_splice.py  do_splice2.py  find_bounds.py  fix_regex.py  fix_retrieve.py  main.py  main_new.py  new_tree_retrieve.txt  pyproject.toml  replace_body.py  replace_tree_retrieve.py  requirements.txt  splice3.py  splice4.py  test_call_minimax.py  test_chat.py  test_chat_query.py  test_minimax.py  test_pageindex.py  test_pdf.py  trace.py  trace2.py
backend/dev/: answer_block.txt  apply_fix.py  apply_fixes.py  call_func.txt  call_minimax_func.txt  chatgpt_api.txt  check_syspath.py  debug_block.py  debug_full_flow.py  debug_retrieve.py  debug_router.py  debug_test2.py  direct_retrieve.py  direct_retrieve_test.py  direct_test_output.txt  do_fix.py  dump_answer.py  dump_lines.py  dump_prompt.py  explore_bio_tree.py  extract_json.txt  extract_prompt.py  find_answer_prompt.py  find_error.py  find_fix.py  find_prompt.py  find_strip.py  fix2.py  fix3.py  fix_answer.py  fix_answer_block.py  fix_answer_format.py  fix_json_extract.py  fix_loop.py  fix_loop_bin.py  fix_minimax_calls.py  fix_tree.py  (+47 more)
(+147 files in other folders)
