[tool.poetry]
name = "washu-navigator-backend"
version = "0.1.0"
description = ""
authors = ["Ethan Feng"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = { extras = ["standard"], version = "0.30.0" }
python-dotenv = "1.0.1"
httpx = "0.28.1"
pymupdf = "1.24.0"
pdfplumber = "0.11.0"
google-genai = "1.7.0"
google-cloud-aiplatform = "1.60.0"
PyYAML = "6.0.1"
sqlalchemy = "2.0.30"
aiosqlite = "0.20.0"
python-multipart = "0.0.9"
slowapi = "0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
